# Zevryon

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_Z1D_TEMP.txt  SECURITY.md
.bootstrap/: READY  m1-manifest.json  m1.part000  m1.part001  m1.part002  m1.part003  source.part000  source.part001  source.part002  source.part003  source.part004  source.part005  source.part006  source.part007  source.part008  source.part012
.github/workflows/: bootstrap-source.yml  ci.yml  competitor-benchmark.yml  titan.yml  vendor-bidi-mirroring-header.yml  z1-bidi-character-diagnostic.yml  z1-bidi-compile-diagnostic.yml  z1-bidi-data.yml  z1-bidi-implicit.yml  z1-bidi-lifetime-fix.yml  z1-bidi-macos.yml  z1-bidi-memory-fix.yml  z1-bidi-mirroring-data.yml  z1-bidi-mirroring-runtime.yml  z1-bidi-neutral.yml  z1-bidi-reference.yml  z1-bidi-sequence.yml  z1-bidi-source-fix.yml  z1-bidi-visual.yml  z1-bidi-w7-fix.yml  z1-bidi-weak.yml  z1-bidi.yml  z1-grapheme-certification.yml  z1-grapheme.yml  z1-script-data.yml  z1-script.yml  z1-unicode.yml  z2-catalog-font-resource-resolver.yml  z2-catalog-harfbuzz-shaping.yml  z2-coretext-discovery.yml  z2-directwrite-discovery.yml  z2-font-catalog-fallback.yml  z2-font-content-identity.yml  z2-font-discovery-generation.yml  z2-font-file-loader.yml  z2-font-load-locator.yml  z2-font-resource-integrity.yml  z2-font-resource-sfnt.yml  z2-fontconfig-discovery.yml  z2-harfbuzz-shaping.yml  (+4 more)
cmake/: coretext_discovery.cmake  font_resource_sfnt.cmake  harfbuzz_shaping.cmake  opentype_directory.cmake
config/: zenith_program.json
docs/: M1_MASSIVEDOC_INTEGRATION.md  M2_COMPACT_VIEWPORT.md  M2_DYNAMIC_HEIGHT_INDEX.md  M3_LAYOUT_WINDOW.md  MAINLINE_EXECUTION_PLAN.md  MASSIVEDOC_WORST_CASE_CONTRACT.md  Z1C_SCRIPT_RUNS.md  Z1D_BIDI.md  Z1D_BIDI_IMPLICIT_LEVELS.md  Z1D_BIDI_MIRRORING.md  Z1D_BIDI_MIRRORING_RUNTIME.md  Z1D_BIDI_NEUTRALS.md  Z1D_BIDI_SEQUENCES.md  Z1D_BIDI_SUBSTRATE.md  Z1D_BIDI_VISUAL_ORDER.md  Z1D_BIDI_WEAK_TYPES.md  Z1D_PR_NOTE.md  Z1D_STATUS.md  Z1_STREAMING_UTF8.md  Z2A2_FONT_DISCOVERY_GENERATION.md  Z2A3_FONTCONFIG_DISCOVERY.md  Z2A4_DIRECTWRITE_DISCOVERY.md  Z2A5_CORETEXT_DISCOVERY.md  Z2A_FONT_CATALOG_FALLBACK.md  Z2B10_CATALOG_HARFBUZZ_SHAPING.md  Z2B11A_PREPARED_HARFBUZZ_FACE.md  Z2B1B_FONT_RESOURCE_INTEGRITY.md  Z2B1_FONT_RESOURCE_SFNT.md  Z2B1_HARFBUZZ_SHAPING.md  Z2B1_OPENTYPE_DIRECTORY.md  Z2B2_VERIFIED_HARFBUZZ_INPUT.md  Z2B3_VERIFIED_FONT_RESOURCE.md  Z2B4_HARFBUZZ_VERIFIED_RESOURCE.md  Z2B5_VERIFIED_FONT_CACHE.md  Z2B6_FONT_CONTENT_IDENTITY.md  Z2B7_FONT_FILE_LOADER.md  Z2B8_FONT_LOAD_LOCATOR.md  Z2B9_CATALOG_FONT_RESOURCE_RESOLVER.md  ZENITH_HOT_SCROLL.md  ZENITH_MASTER_PROGRAM.md  (+1 more)
evidence/: unicode_bidi_data.manifest.json  unicode_script_data.manifest.json
evidence/milestones/: m1-native-store-64mib.json  m2-compact-viewport-64mib.json
schemas/: zenith-benchmark-v1.schema.json
scripts/: browser_competitor_benchmark.py  generate_massivedoc_corpus.py  generate_unicode_bidi_brackets.py  generate_unicode_bidi_data.py  generate_unicode_script_data.py  layout_window_benchmark.py  massivedoc_benchmark.py  zenith_benchmark_contract.py  zenith_global_benchmark.py  zenith_hot_scroll_benchmark.py  zenith_program_contract.py
src/: bidi_benchmark_main.cpp  bidi_bracket_conformance_main.cpp  bidi_character_conformance_main.cpp  bidi_conformance_main.cpp  bidi_explicit.cpp  bidi_explicit.hpp  bidi_implicit.cpp  bidi_implicit.hpp  bidi_implicit_benchmark_main.cpp  bidi_implicit_conformance_main.cpp  bidi_mirroring.cpp  bidi_mirroring.hpp  bidi_mirroring_benchmark_main.cpp  bidi_mirroring_conformance_main.cpp  bidi_neutral.cpp  bidi_neutral.hpp  bidi_neutral_benchmark_main.cpp  bidi_neutral_part00.inc  bidi_neutral_part01.inc  bidi_resolver.cpp  bidi_resolver.hpp  bidi_sequence.cpp  bidi_sequence.hpp  bidi_sequence_benchmark_main.cpp  bidi_sequence_conformance_main.cpp  bidi_test_conformance_main.cpp  bidi_visual.cpp  bidi_visual.hpp  bidi_visual_benchmark_main.cpp  bidi_visual_conformance_main.cpp  bidi_weak.cpp  bidi_weak.hpp  bidi_weak_benchmark_main.cpp  bidi_weak_conformance_main.cpp  catalog_font_resource_resolver.cpp  catalog_font_resource_resolver.hpp  catalog_harfbuzz_shaper.cpp  catalog_harfbuzz_shaper.hpp  compact_document.cpp  compact_document.hpp  (+99 more)
tests/: bidi_explicit_tests.cpp  bidi_implicit_tests.cpp  bidi_mirroring_tests.cpp  bidi_neutral_tests.cpp  bidi_resolver_tests.cpp  bidi_sequence_tests.cpp  bidi_visual_level126_tests.cpp  bidi_visual_tests.cpp  bidi_weak_tests.cpp  catalog_font_resource_resolver_tests.cpp  catalog_harfbuzz_shaper_tests.cpp  compact_document_tests.cpp  coretext_discovery_tests.cpp  directwrite_discovery_tests.cpp  font_catalog_fallback_tests.cpp  font_content_identity_tests.cpp  font_discovery_generation_concurrency_tests.cpp  font_discovery_generation_tests.cpp  font_fallback_bucket_equivalence_tests.cpp  font_file_loader_tests.cpp  font_load_locator_tests.cpp  font_resource_integrity_tests.cpp  font_resource_sfnt_tests.cpp  fontconfig_discovery_tests.cpp  grapheme_segmenter_tests.cpp  harfbuzz_shaper_tests.cpp  harfbuzz_verified_input_tests.cpp  harfbuzz_verified_resource_tests.cpp  layout_checkpoint_tests.cpp  layout_window_tests.cpp  massivedoc_store_tests.cpp  opentype_directory_tests.cpp  prepared_harfbuzz_face_tests.cpp  prepared_harfbuzz_shaping_tests.cpp  resource_ledger_tests.cpp  script_run_tests.cpp  test_device_profile_detection.py  test_io_window_contract.py  test_massivedoc_corpus_generator.py  test_memory_controller.py  (+10 more)
tools/: generate_unicode_bidi_mirroring.py
zevryon_platform/: __init__.py  memory_controller.py  performance_contract.py  viewport_policy.py
